--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.15",
+    "heroicons-react": "^1.4.1",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
